# Sketch

./: .gitignore  BenchMark.h  CMakeCache.txt  CPU  Makefile  README.md  cmake_install.cmake  run.sh
CPU/Experiment/FilterPerformance/: CMakeLists.txt  FilterBenchMark.h  FilterPerformance  FilterPerformance.cpp  README.md  memory_100000.csv  memory_100000_threshold.txt  memory_25000.csv  memory_25000_threshold.txt  memory_50000.csv  memory_50000_threshold.txt  memory_75000.csv  memory_75000_threshold.txt  metric.py  run.sh
CPU/Experiment/PacketCountDistribution/: CMakeLists.txt  ElephantMiceSums.py  PacketCountDistribution  PacketCountDistribution.cpp  PlotPacketCountDistribution.py  README.md  log.txt  memory_500000_threshold_0.000100_all.txt  memory_500000_threshold_0.000100_filtered.txt  run.sh  run_clear.sh
CPU/Experiment/PacketCountDistribution/202111011400/: memory_100000_threshold_0.000100_retained.csv  memory_100000_threshold_0.000100_retained.txt
CPU/Experiment/PacketCountDistribution/202211011400/: memory_100000_threshold_0.000100_filtered.txt  memory_100000_threshold_0.000100_retained.csv  memory_100000_threshold_0.000100_retained.txt
CPU/Experiment/PacketCountDistribution/equinix-chicago.dirA.20160121-140000.UTC.anon/: memory_100000_threshold_0.000100_filtered.txt  memory_100000_threshold_0.000100_retained.csv  memory_100000_threshold_0.000100_retained.txt  memory_100000_threshold_0.000100_total.csv
CPU/Experiment/TwoStageParameter/: CMakeLists.txt  PlotHeatmap.py  PlotLineChart.py  README.md  TwoStageParameter  TwoStageParameter.cpp  run.sh
(+300 files in other folders)
